--- a/solr/solr-ref-guide/src/probability.adoc
+++ b/solr/solr-ref-guide/src/probability.adoc
@@ -308,7 +308,6 @@ When this expression is sent to the /stream handler it responds with:
 
 === Multivariate Normal Distribution
 
-
 The multivariate normal distribution is a generalization of the
 univariate normal distribution to higher dimensions.
 
@@ -320,17 +319,43 @@ the variables is defined by a covariance matrix.
 
 The `sample` function can be used to draw samples
 from a multivariate normal distribution in much the same
-way it does from a univariate normal distribution. The difference is that each
- sample will be an array containing a sample
-drawn from each of underlying normal distributions. If multiple samples are drawn,
-the `sample` function returns a matrix with a sample in each row.
-Over the long term the columns of the sample matrix will conform to the covariance
-matrix used to parametrize the multi variate normal distribution.
+way as a univariate normal distribution.
+The difference is that each sample will be an array containing a sample
+drawn from each of the underlying normal distributions.
+If multiple samples are drawn, the `sample` function returns a matrix with a
+sample in each row. Over the long term the columns of the sample
+matrix will conform to the covariance matrix used to parametrize the
+multivariate normal distribution.
 
-The example below demonstrates how to initialize and draw samples from a multivariate
-normal distribution.
+The example below demonstrates how to initialize and draw samples
+from a multivariate normal distribution.
 
+In this example 5000 random samples are selected from a collection
+of log records. Each sample contains
+the fields *filesize_d* and *response_d*. The values of both fields conform
+to a normal distribution.
 
+Both fields are then vectorized. The *filesize_d* vector is stored in
+variable *b* and the *response_d* variable is stored in variable *c*.
+
+An array is created that contains the *means* of the two vectorized fields.
+
+Then both vectors are added to a matrix which is transposed. This creates
+an *observation* matrix where each row contains one observation of
+*filesize_d* and *response_d*. A covariance matrix is then created from the columns of
+the observation matrix with the
+`cov` function. The covariance matrix describes the covariance between
+filesize_d and response_d.
+
+The `multivariateNormalDistribution` function is then called with the
+array of means for the two fields and the covariance matrix.
+
+Finally ten samples are drawn from the multivariate normal distribution. The samples
+are returned as a matrix, with each row representing one sample. There are two
+columns in the matrix. The first column contains samples for *filesize_d* and the second
+column contains samples for *response_d*. Over the long term the covariance between
+the columns will conform to the covariance matrix used to instantiate the
+multivariate normal distribution.
 
 [source,text]
 ----
@@ -339,7 +364,7 @@ let(a=random(collection2, q="*:*", rows="5000", fl="filesize_d, response_d"),
     c=col(a, response_d),
     d=array(mean(b), mean(c)),
     e=transpose(matrix(b, c)),
-    f=cov(d),
+    f=cov(e),
     g=multiVariateNormalDistribution(d, f),
     h=sample(g, 10))
 ----
@@ -348,6 +373,39 @@ When this expression is sent to the /stream handler it responds with:
 
 [source,json]
 ----
-
+{
+  "result-set": {
+    "docs": [
+      {
+        "h": [
+          [
+            41974.85669321393,
+            779.4097049705296
+          ],
+          [
+            42869.19876441414,
+            834.2599296790783
+          ],
+          [
+            38556.30444839889,
+            720.3683470060988
+          ],
+          [
+            37689.31290928216,
+            686.5549428100018
+          ],
+          [
+            40564.74398214547,
+            769.9328090774
+          ]
+        ]
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 162
+      }
+    ]
+  }
+}
 ----
 
