--- a/solr/solr-ref-guide/src/machine-learning.adoc
+++ b/solr/solr-ref-guide/src/machine-learning.adoc
@@ -22,8 +22,11 @@ functions.
 
 == Feature Scaling
 
-Before performing machine learning operations its often important to
+Before performing machine learning operations its often necessary to
 scale the feature vectors so they can be compared at the same scale.
+
+All the scaling function operate on vectors or matrices.
+When operating on a matrix the *rows* of the matrix are scaled.
 
 === Min/Max Scaling
 
@@ -274,18 +277,19 @@ and then the top features are extracted from the cluster centroids.
 
 Let's look at what data is assigned to each variable:
 
-* `a`: The `random` function returns a sample of 500 documents from the *enron*
+* *a*: The `random` function returns a sample of 500 documents from the *enron*
 collection that match the query *body:oil*. The `select` function selects the *id* and
 and annotates each tuple with the analyzed bigram terms from the body field.
 
-* `b`: The `termVectors` function creates a tf-idf term vector matrix from the
-tuples stored in variable *a*. There is a row for each tuple in the matrix. The columns of the matrix
+* *b*: The `termVectors` function creates a TF-IDF term vector matrix from the
+tuples stored in variable *a*. Each row in the matrix represents a document. The columns of the matrix
 are the bigram terms that were attached to each tuple.
-* `c`: The `kmeans` function clusters the rows of the matrix into 5 clusters. The k-means clustering is performed using the
+* *c*: The `kmeans` function clusters the rows of the matrix into 5 clusters. The k-means clustering is performed using the
 *Euclidean distance* measure.
-* `d`: The `getCentroids` function returns a matrix of cluster centroids. Each row in the matrix is a centroid
-from one of the 5 clusters.
-* `e`: The `topFeatures` function returns the column labels for the top 5 features of each centroid in the matrix.
+* *d*: The `getCentroids` function returns a matrix of cluster centroids. Each row in the matrix is a centroid
+from one of the 5 clusters. The columns of the matrix are the same bigrams terms of the term vector matrix.
+* *e*: The `topFeatures` function returns the column labels for the top 5 features of each centroid in the matrix.
+This returns the top 5 bigram terms for each centroid.
 
 [source,text]
 ----
@@ -453,10 +457,10 @@ This expression returns the following response:
 
 == Multi K-means Clustering
 
-The outcome of K-means clustering will be different based
-on the initial placement of the centroids. K-means is fast enough
-to allow multiple trials to be performed in a reasonable
-period of time. The `multiKmeans` function runs the K-means
+K-means clustering will be produce different results depending on
+the initial placement of the centroids. K-means is fast enough
+that multiple trials can be performed and the best outcome selected.
+The `multiKmeans` function runs the K-means
 clustering algorithm for a gven number of trials and selects the
 best result based on which trial produces the lowest intra-cluster
 variance.
@@ -544,11 +548,11 @@ for each cluster. The values in the columns are the probability that the vector 
 cluster.
 
 A simple example will make this more clear. In the example below 300 documents are analyzed and
-then turned into a term vectors matrix. Then the `fuzzyKmeans` clusters the
+then turned into a term vector matrix. Then the `fuzzyKmeans` function clusters the
 term vectors into 12 clusters with a fuzziness factor of 1.25.
 
 The `getMembershipMatrix` function is used to return the membership matrix and the first row
-of membership matrix is retrieved. The `precision` function is then applied to the first row
+of membership matrix is retrieved with the `rowAt` function. The `precision` function is then applied to the first row
 of the matrix to make it easier to read.
 
 The output shows a single vector representing the cluster membership probabilities for the first
@@ -603,7 +607,7 @@ This expression returns the following response:
 
 The `knn` function searches the rows of a matrix for the
 K-nearest neighbors of a search vector. The `knn` function
-returns a matrix of the K-nearest neighbors. The `knn` function
+returns a *matrix* of the K-nearest neighbors. The `knn` function
 has a *named parameter* called *distance* which specifies the distance measure.
 There are four distance measures currently supported:
 
@@ -618,11 +622,11 @@ the `knn` function.
 In the example, the centroids matrix is set to variable *d*. The first
 centroid vector is selected from the matrix with the `rowAt` function.
 Then the `knn` function is used to find the 3 nearest neighbors
-to the centroid vector in the term vectors matrix (variable b).
+to the centroid vector in the term vector matrix (variable b).
 
 The `knn` function returns a matrix with the 3 nearest neighbors based on the
-default distance measure which is euclidean. Finally, the top features
-of the nearest neighbor matrix are returned.
+default distance measure which is euclidean. Finally, the top 4 features
+of the term vectors in the nearest neighbor matrix are returned.
 
 [source,text]
 ----
