--- a/solr/solr-ref-guide/src/matrix-math.adoc
+++ b/solr/solr-ref-guide/src/matrix-math.adoc
@@ -24,15 +24,15 @@ probability and machine learning functions.
 == Matrix Creation
 
 A matrix can be created with the `matrix` function.
-
-The matrix function wraps a list of `arrays` and returns a matrix
-represented as a multi-dimensional array.
+The matrix function is passed a list of `arrays` with
+each array representing a *row* in the matrix.
 
 The example below creates a two-by-two matrix.
 
 [source,text]
 ----
-matrix(array(1, 2), array(4, 5))
+matrix(array(1, 2),
+       array(4, 5))
 ----
 
 When this expression is sent to the /stream handler it
@@ -66,11 +66,11 @@ responds with:
 == Accessing Rows and Columns
 
 The rows and columns of a matrix can be accessed using the `rowAt`
-and `colAt` functions. All examples going forward will use
-variables to make them easier to follow.
+and `colAt` functions.
 
-The example below creates a 2 by 2 matrix and returns the column
-at index 1 as an array.
+The example below creates a 2 by 2 matrix and returns the second column of the matrix.
+Notice that the matrix is passed variables in this example rather than
+directly passed a list of arrays.
 
 [source,text]
 ----
@@ -107,26 +107,26 @@ responds with:
 
 A matrix can have column and rows and labels. The functions
 `setRowLabels`, `setColumnLabels`, `getRowLabels` and `getColumnLabels`
-can be used to set and get the labels. The actual labels values
-are set using an array of strings.
+can be used to set and get the labels. The label values
+are set using string arrays.
 
-The example below sets the labels. In other sections of the
+The example below sets the row and column labels. In other sections of the
 user guide examples are shown where functions return matrices
 with the labels already set.
 
-Below is simple example of setting and getting row and column labels
+Below is a simple example of setting and
+getting row and column labels
 on a matrix.
 
 [source,text]
 ----
-let(echo="f, g",
-    a=array(1, 2),
-    b=array(4, 5),
-    c=matrix(a, b),
-    d=setRowLabels(c, array("row0", "row1")),
-    e=setColumnLabels(c, array("col0", "col1")),
-    f=getRowLabels(c),
-    g=getColumnLabels(c))
+let(echo="d, e",
+    a=matrix(array(1, 2),
+             array(4, 5)),
+    b=setRowLabels(a, array("row0", "row1")),
+    c=setColumnLabels(b, array("col0", "col1")),
+    d=getRowLabels(c),
+    e=getColumnLabels(c))
 ----
 
 When this expression is sent to the /stream handler it
@@ -138,11 +138,11 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "f": [
+        "d": [
           "row0",
           "row1"
         ],
-        "g": [
+        "e": [
           "col0",
           "col1"
         ]
@@ -159,10 +159,8 @@ responds with:
 == Matrix Attributes
 
 A matrix can also have an arbitrary set of named attributes associated
-with it. Certain functions such as the `termVectors` function
+with it. Certain functions, such as the `termVectors` function,
 return matrices that contain attributes that describe data in the matrix.
-Consult the specific function documentation to determine if
-attributes are returned with the matrix.
 
 Attributes can be retrieved by name using the `getAttribute` function and
 the entire attribute map can be returned using the `getAttributes`
@@ -177,12 +175,11 @@ The example below retrieves the dimensions of a matrix.
 
 [source,text]
 ----
-let(echo="d,e",
-    a=array(1, 2, 3),
-    b=array(4, 5, 6),
-    c=matrix(a, b),
-    d=rowCount(c),
-    e=columnCount(c))
+let(echo="b,c",
+    a=matrix(array(1, 2, 3),
+             array(4, 5, 6)),
+    b=rowCount(a),
+    c=columnCount(a))
 ----
 
 When this expression is sent to the /stream handler it
@@ -194,8 +191,8 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "d": 2,
-        "e": 3
+        "b": 2,
+        "c": 3
       },
       {
         "EOF": true,
@@ -215,10 +212,9 @@ An example of matrix transposition is shown below:
 
 [source,text]
 ----
-let(a=array(1, 2),
-    b=array(4, 5),
-    c=matrix(a, b),
-    d=transpose(c))
+let(a=matrix(array(1, 2),
+             array(4, 5)),
+    b=transpose(a))
 ----
 
 When this expression is sent to the /stream handler it
@@ -230,7 +226,7 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "d": [
+        "b": [
           [
             1,
             4
@@ -253,16 +249,14 @@ responds with:
 == Matrix Summations
 
 The rows and columns of a matrix can be summed with the `sumRows` and `sumColumns` functions.
-Below is an example of the `sumRows` function, which returns an
+Below is an example of the `sumRows` function which returns an
 array with the sum of each row.
-
 
 [source,text]
 ----
-let(a=array(1, 2, 3),
-    b=array(4, 5, 6),
-    c=matrix(a, b),
-    d=sumRows(c))
+let(a=matrix(array(1, 2, 3),
+             array(4, 5, 6)),
+    b=sumRows(a))
 ----
 
 When this expression is sent to the /stream handler it
@@ -274,7 +268,7 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "d": [
+        "b": [
           6,
           15
         ]
@@ -293,10 +287,9 @@ Below is an example of the `grandSum` function:
 
 [source,text]
 ----
-let(a=array(1, 2, 3),
-    b=array(4, 5, 6),
-    c=matrix(a, b),
-    d=grandSum(c))
+let(a=matrix(array(1, 2, 3),
+             array(4, 5, 6)),
+    b=grandSum(a))
 ----
 
 When this expression is sent to the /stream handler it
@@ -308,7 +301,7 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "d": 21
+        "b": 21
       },
       {
         "EOF": true,
@@ -322,16 +315,15 @@ responds with:
 == Scalar Matrix Math
 
 The same scalar math functions that apply to vectors can also be applied to matrices: `scalarAdd`, `scalarSubtract`,
-`scalarMultiply`, `scalarDivide`. Below is an example of the `scalarAdd` function which adds a scalar value to every
-element in a matrix.
+`scalarMultiply`, `scalarDivide`. Below is an example of the `scalarAdd` function
+which adds a scalar value to each element in a matrix.
 
 
 [source,text]
 ----
-let(a=array(1, 2),
-    b=array(4, 5),
-    c=matrix(a, b),
-    d=scalarAdd(10, c))
+let(a=matrix(array(1, 2),
+             array(4, 5)),
+    b=scalarAdd(10, a))
 ----
 
 When this expression is sent to the /stream handler it
@@ -343,7 +335,7 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "d": [
+        "b": [
           [
             11,
             12
@@ -373,10 +365,9 @@ Below is a simple example of an element-by-element addition of a matrix by itsel
 
 [source,text]
 ----
-let(a=array(1, 2),
-    b=array(4, 5),
-    c=matrix(a, b),
-    d=ebeAdd(c, c))
+let(a=matrix(array(1, 2),
+             array(4, 5)),
+    b=ebeAdd(a, a))
 ----
 
 When this expression is sent to the /stream handler it
@@ -388,7 +379,7 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "d": [
+        "b": [
           [
             2,
             4
@@ -415,13 +406,11 @@ example of matrix multiplication:
 
 [source,text]
 ----
-let(a=array(1, 2),
-    b=array(4, 5),
-    c=matrix(a, b),
-    d=array(11, 12),
-    e=array(14, 15),
-    f=matrix(d, e),
-    g=matrixMult(c, f))
+let(a=matrix(array(1, 2),
+             array(4, 5)),
+    b=matrix(array(11, 12),
+             array(14, 15)),
+    c=matrixMult(a, b))
 ----
 
 When this expression is sent to the /stream handler it
@@ -433,7 +422,7 @@ responds with:
   "result-set": {
     "docs": [
       {
-        "g": [
+        "c": [
           [
             39,
             42
