--- a/solr/solr-ref-guide/src/vectorization.adoc
+++ b/solr/solr-ref-guide/src/vectorization.adoc
@@ -1,4 +1,4 @@
-= Vectorization
+= Streams and Vectorization
 // Licensed to the Apache Software Foundation (ASF) under one
 // or more contributor license agreements.  See the NOTICE file
 // distributed with this work for additional information
@@ -18,65 +18,56 @@
 
 This section of the user guide explores techniques
 for retrieving streams of data from Solr and vectorizing the
-*numeric* fields in the data.
+*numeric* fields.
 
 The next chapter of the user guide covers
 Text Analysis and Term Vectors which describes how to
 vectorize *text* fields.
 
-== streams
+== Streams
 
-Streaming Expressions have a wide range of stream sources that can be used to
+Streaming Expressions has a wide range of stream sources that can be used to
 retrieve data from Solr Cloud collections. Math expressions can be used
 to vectorize and analyze the results sets.
 
 Below are some of the key stream sources:
 
-=== `random`
+* *random*: Random sampling is widely used in statistics, probability and machine learning.
+The `random` function returns a random sample of search results that match a
+query. The random samples can be vectorized and operated on by math expressions and the results
+can be used to describe and make inferences about the entire population.
 
-Random sampling is widely used in statistics, probability and machine learning.
-The `random` Streaming Expression returns a random sample of search results that match a
-query.
-
-=== `timeseries`
-
-Time series analysis is one of the primary data analysis use cases. The `timeseries`
+* *timeseries*: The `timeseries`
 expression provides fast distributed time series aggregations, which can be
 vectorized and analyzed with math expressions.
 
-=== `knnSearch`
-
-The K-nearest neighbor algorithm is one of the core machine learning algorithms. The `knnSearch`
-function is specialized knn function which finds the k-nearest neighbors of a document in
+* *knnSearch*: K-nearest neighbor is a core machine learning algorithm. The `knnSearch`
+function is a specialized knn algorithm optimized to find the k-nearest neighbors of a document in
 a distributed index. Once the nearest neighbors are retrieved they can be vectorized
 and operated on by machine learning and text mining algorithms.
 
-=== `sql`
-
-SQL is the primary query language used by data scientists. The `sql` function supports
+* *sql*: SQL is the primary query language used by data scientists. The `sql` function supports
 data retrieval using a subset of SQL which includes both full text search and
 fast distributed aggregations. The result sets can then be vectorized and operated
 on by math expressions.
 
-=== `topic`
+* *jdbc*: The `jdbc` function allows data from any JDBC compliant data source to be combined with
+streams originating from Solr. Result sets from outside data sources can be vectorized and operated
+on by math expressions in the same manner as result sets originating from Solr.
 
-Messaging is an important foundational technology for large scale computing. The `topic`
+* *topic*: Messaging is an important foundational technology for large scale computing. The `topic`
 function provides publish/subscribe messaging capabilities by treating
 Solr Cloud as a distributed message queue. Topics are extremely powerful
 because they allow subscription by query. Topics can be use to support a broad set of
 use cases including bulk text mining operations and AI alerting.
 
-=== `nodes`
-
-Graph queries are frequently used by recommendation engines and are an important
+* *nodes*: Graph queries are frequently used by recommendation engines and are an important
 machine learning tool. The `nodes` function provides fast, distributed, breadth
 first graph traversal over documents in a Solr Cloud collection. The node sets collected
 by the `nodes` function can be operated on by statistical and machine learning expressions to
 gain more insight into the graph.
 
-=== `search`
-
-Ranked search results are a powerful tool for finding the most relevant
+* *search*: Ranked search results are a powerful tool for finding the most relevant
 documents from a large document corpus. The `search` expression
 returns the top N ranked search results that match any
 Solr query, including geo-spatial queries. The smaller set of relevant
@@ -164,6 +155,10 @@ let(a=random(collection1, q="*:*", rows="3", fl="price_f"),
 
 == Applying Math Expressions to the Vector
 
+Once a vector has been created any math expression that operates on vectors
+can be applied. In the example below the `mean` function is applied to
+the vector assigned to variable *b*.
+
 [source,text]
 ----
 let(a=random(collection1, q="*:*", rows="15000", fl="price_f"),
@@ -196,15 +191,18 @@ Matrices can be created by vectorizing multiple numeric fields
 and adding them to a matrix. The matrices can then be operated on by
 any math expression that operates on matrices.
 
-Note that this section deals with the creation matrices from numeric data.
-The next chapter of the user guide covers Text Analysis and Term Vectors
-which describes how to build tf-idf term vector matrices from text fields.
+Note that this section deals with the creation of matrices
+from numeric data. The next chapter of the user guide covers
+Text Analysis and Term Vectors which describes how to build TF-IDF
+term vector matrices from text fields.
 
-Below is a simple example where four random samples are taken from different
-sub-populations in the data. The *price_f* field of each random sample is
-vectorized and the vectors are added as rows to a matrix. Then the `sumRows`
-function is applied to the matrix to return a vector containing the sum
-of each row.
+Below is a simple example where four random samples are taken
+from different sub-populations in the data. The *price_f* field of
+each random sample is
+vectorized and the vectors are added as rows to a matrix.
+Then the `sumRows`
+function is applied to the matrix to return a vector containing
+the sum of each row.
 
 [source,text]
 ----
