--- a/solr/solr-ref-guide/src/dsp.adoc
+++ b/solr/solr-ref-guide/src/dsp.adoc
@@ -16,6 +16,257 @@
 // specific language governing permissions and limitations
 // under the License.
 
+This section of the user guide explores functions that are commonly used in the field of
+Digital Signal Processing (DSP).
+
+== Dot product
+
+The `dotProduct` function is used to calculate the dot product of two arrays.
+The dot product is the fundamental calculation for the DSP functions discussed in this section. Before diving into
+the more complex DSP functions its useful to get an understanding of how the dot product calculation operates.
+
+=== Combining two arrays
+
+The `dotProduct` function can be used to combine two arrays into a single product. A simple example can help
+illustrate this concept.
+
+In the example below two arrays are set to variables *a* and *b* and then operated on by the `dotProduct` function.
+The outout of the `dotProduct` function is set to variable *c*.
+
+Then the `mean` function is then used to compute the mean of the first array which is set to the variable `d`.
+
+Both the dot product and the mean are included in the output.
+
+When we look at the output of this expression we see that the *dot product* and the *mean* of the first array
+are both 18. The dot product function actually calculated the mean of the first array.
+
+[source,text]
+----
+let(echo="c, d",
+    a=array(10, 20, 30, 40, 50),
+    b=array(.2, .2, .2, .2, .2),
+    c=dotProduct(a, b),
+    d=mean(a))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "c": 30,
+        "d": 30
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+To get a better understanding of how the dot product calculation operates we can perform the steps of the
+calculation using vector math and look at the output of each step.
+
+In the example below the `ebeMultiply` function performs an element-by-element multiplication of
+two arrays. This is the first step of the dot product calculation. The result of the element-by-element
+multiplication is assigned to variable *c*.
+
+In the next step the `add` function adds all the elements of the array in variable *c*.
+
+Notice that multiplying each element of the first array by .2 and then adding the values is
+equivalent to the formula for computing the mean of the first array. The formula for computing the mean
+of an array is to add all the elements and divide by the number of elements.
+
+[source,text]
+----
+let(echo="c, d",
+    a=array(10, 20, 30, 40, 50),
+    b=array(.2, .2, .2, .2, .2),
+    c=ebeMultiply(a, b),
+    d=add(c))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "c": [
+          2,
+          4,
+          6,
+          8,
+          10
+        ],
+        "d": 30
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+In the example above two arrays were combined in a way that produced the mean of the first. In the second array
+each value was set to .2. Another way of looking at this is that each value has the same weight. By varying the weights
+in the second array we can produce a different result. For example if the first array represents a time series, the weights
+in the second array can be set to add more weight to a particular element in the first array.
+
+The example below creates a weighted average with the weight decreasing from right to left. Notice that the weighted mean
+of 36.666 is larger the previous mean which was 30. This is because more weighted was given to last element in the
+array.
+
+[source,text]
+----
+let(echo="c, d",
+    a=array(10, 20, 30, 40, 50),
+    b=array(.066666666666666,.133333333333333,.2, .266666666666666, .33333333333333),
+    c=ebeMultiply(a, b),
+    d=add(c))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "c": [
+          0.66666666666666,
+          2.66666666666666,
+          6,
+          10.66666666666664,
+          16.6666666666665
+        ],
+        "d": 36.66666666666646
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+=== Representing Correlation
+
+Often when we think of correlation, we are thinking of *Pearson* correlation in the field of statistics. But the definition of
+correlation is actually more general: a mutual relationship or connection between two or more things.
+In the field of digital signal processing the dot product is used to represent correlation. The examples below demonstrates
+how the dot product can be used to represent correlation.
+
+In the example below the dot product is computed for two vectors. Notice that the vectors have different values that they fluctiate
+together. The output of the dot product is 190, which is hard to reason about because because its not scaled.
+
+[source,text]
+----
+let(echo="c, d",
+    a=array(10, 20, 30, 20, 10),
+    b=array(1, 2, 3, 2, 1),
+    c=dotProduct(a, b))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "c": 190
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+One approach to scaling the dot product is to first scale the vectors so that both vectors have a magnitude of 1. Vectors with a
+magnitude of 1, also called unit vectors, are used when comparing only the angle between vectors rather then the magnitude.
+The `unitize` function can be used to unitize the vectors before calling the dot product.
+
+Notice in the example below the dot product result, variable *e*, is effectively 1. When working with unit vectors the dot product
+will be scaled between 1 and -1. Also notice in the example `cosineSimilarity` is calculated on the unscaled vectors and the
+answer is also effectively 1. This is because cosine similarity is scaled dot product.
+
+
+[source,text]
+----
+let(echo="e, f",
+    a=array(10, 20, 30, 20, 10),
+    b=array(1, 2, 3, 2, 1),
+    c=unitize(a),
+    d=unitize(b),
+    e=dotProduct(c, d),
+    f=cosineSimilarity(a, b))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "e": 0.9999999999999998,
+        "f": 0.9999999999999999
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+If we transposed the first two numbers in the first array, so that the vectors
+are not perfectly correlated, we see that cosine similarity drops.
+
+[source,text]
+----
+let(echo="c, d",
+    a=array(20, 10, 30, 20, 10),
+    b=array(1, 2, 3, 2, 1),
+    c=cosineSimilarity(a, b))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "c": 0.9473684210526314
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
 
 
 == Convolution
